# Claw

./: .gitignore  404.html  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  introduction.html  print.html  rustfmt.toml  searchindex.js  searchindex.json
.cargo/: config.toml  rustfmt-nightly.toml
.github/workflows/: ci.yml  docs.yml
appendix/: a-useful-links.html
contributing/: getting-started.html
crates/claw_ast/: Cargo.toml
crates/claw_ast/src/: lib.rs  ptr.rs
crates/claw_driver/: Cargo.toml  README.md
crates/claw_driver/src/: main.rs
crates/claw_ibt/: Cargo.toml
crates/claw_ir/: Cargo.toml  README.md
crates/claw_ir/src/: lib.rs  schema.rs
crates/claw_ir/src/builtin/: mod.rs  opcode.rs
crates/claw_ir/src/hir/: mod.rs
crates/claw_ir/src/lir/: mod.rs
crates/claw_ir/src/query/: cache.rs  mod.rs
crates/claw_lex/: Cargo.toml
crates/claw_lex/src/: core.rs  cursor.rs  error.rs  errors.rs  lib.rs  span.rs  tests.rs  token.rs  utils.rs
crates/claw_middle/: Cargo.toml  README.md
crates/claw_middle/src/: lib.rs
crates/claw_parse/: Cargo.toml  README.md
crates/claw_parse/src/: ast.rs  context.rs  error.rs  errors.rs  lex.rs  lib.rs  target.rs
crates/claw_parse/src/ast/: atom.rs  mod.rs  tests.rs
crates/claw_parse/src/error/: mod.rs
crates/claw_parse/src/lex/: mod.rs  token.rs  values.rs
crates/claw_parse/src/parse/: mod.rs  parser.rs
crates/claw_parse/src/parser/: declare.rs  expr.rs  mod.rs  statement.rs
crates/claw_parse/src/parsers/: declarations.rs  mod.rs  sprite.rs
crates/claw_parse/src/utils/: macros.rs  mod.rs
crates/claw_parse/tests/: parser.rs  simple.claw  snap.rs
crates/claw_parse/tests/samples/: complex.claw  simple.claw
crates/claw_parse/tests/snapshots/: snap__lexer@complex.claw.snap  snap__lexer@simple.claw.snap
crates/claw_sb3/: Cargo.toml  README.md
crates/claw_schema/: Cargo.toml  README.md
crates/claw_schema/src/: block.rs  costume.rs  lib.rs  project.rs  target.rs
crates/claw_stdlib/: Cargo.toml  README.md
crates/claw_stdlib/src/: events.rs  lib.rs  looks.rs  motion.rs  opcode.rs  types.rs
crates/claw_verify/: Cargo.toml  README.md
crates/claw_verify/src/: lib.rs  main.rs  sb3_schema.json
crates/claw_verify/tests/: simple.json  simple.rs
docs/: book.toml  crates.js  index.html  search-index.js  settings.html  source-files.js
docs/claw/: all.html  index.html  sidebar-items.js
docs/claw/middle/: index.html
docs/claw/middle/stdlib/: index.html
docs/claw/middle/ty/: index.html
docs/claw/parse/: fn.build_report.html  fn.create_parser.html  fn.get_source.html  fn.parse.html  index.html  sidebar-items.js  type.AST.html  type.ParseError.html
docs/claw/parse/ast/: enum.Declaration.html  enum.Expression.html  enum.Statement.html  index.html  sidebar-items.js  type.AST.html
docs/claw/parse/parser/: fn.create_call.html  fn.create_comment.html  fn.create_declare.html  fn.create_expression.html  fn.create_func.html  fn.create_parser.html  fn.create_sprite.html  fn.create_statement.html  index.html  sidebar-items.js
docs/claw/sb3/: index.html  sidebar-items.js  struct.Block.html  struct.Costume.html  struct.Meta.html  struct.Project.html  struct.Target.html
docs/claw/verify/: constant.SB3_DEFINITIONS.html  constant.SB3_SCHEMA.html  fn.verify.html  fn.verify_string.html  index.html  sidebar-items.js
docs/claw_driver/: all.html  fn.load_file.html  fn.main.html  index.html  sidebar-items.js
docs/claw_middle/: all.html  index.html  sidebar-items.js
docs/claw_middle/stdlib/: index.html
docs/claw_middle/ty/: index.html
docs/claw_parse/: all.html  fn.build_report.html  fn.get_source.html  fn.parse.html  index.html  sidebar-items.js  type.ParseError.html
docs/claw_parse/ast/: enum.Declaration.html  enum.Expression.html  enum.Statement.html  index.html  type.AST.html
docs/claw_parse/error/: fn.build_report.html  fn.get_source.html  type.ParseError.html
docs/claw_parse/parser/: fn.create_call.html  fn.create_comment.html  fn.create_declare.html  fn.create_expression.html  fn.create_func.html  fn.create_parser.html  fn.create_sprite.html  fn.create_statement.html  index.html
docs/claw_parse/parser/declare/: fn.create_declare.html  fn.create_func.html  fn.create_sprite.html
docs/claw_parse/parser/expr/: fn.create_call.html  fn.create_expression.html
docs/claw_parse/parser/statement/: fn.create_statement.html
docs/claw_sb3/: all.html  index.html  struct.Block.html  struct.Costume.html  struct.Meta.html  struct.Project.html  struct.Target.html
docs/claw_sb3/block/: struct.Block.html
docs/claw_sb3/costume/: struct.Costume.html
docs/claw_sb3/project/: struct.Meta.html  struct.Project.html
docs/claw_verify/: all.html  constant.SB3_DEFINITIONS.html  constant.SB3_SCHEMA.html  fn.verify.html  fn.verify_string.html  index.html
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: a-useful-links.md
docs/src/claw/: lib.rs.html
docs/src/claw_driver/: main.rs.html
docs/src/claw_middle/: lib.rs.html
docs/src/claw_middle/stdlib/: mod.rs.html
docs/src/claw_middle/ty/: mod.rs.html
docs/src/claw_parse/: error.rs.html  lib.rs.html
docs/src/claw_parse/ast/: mod.rs.html
docs/src/claw_parse/parser/: declare.rs.html  expr.rs.html  mod.rs.html  statement.rs.html
docs/src/claw_sb3/: block.rs.html  costume.rs.html  lib.rs.html  project.rs.html  target.rs.html
docs/src/claw_verify/: lib.rs.html
docs/src/contributing/: getting-started.md
examples/: main.claw  parse.claw  parse.json  simple.claw
notes/: v1-min.md
src/: lib.rs  main.rs
