[package]
name = "claw"
version = "0.1.0-dev"
authors = ["BD103"]
edition = "2021"
description = "Programming language that compiles into Scratch blocks (SB3)."
readme = "README.md"
# homepage = "https://bd103.github.io/Claw"
repository = "https://github.com/BD103/Claw"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
claw_parse = { path = "crates/claw_parse" }
claw_schema = { path = "crates/claw_schema" }
claw_stdlib = { path = "crates/claw_stdlib" }
claw_verify = { path = "crates/claw_verify", optional = true }

[features]
verify = ["dep:claw_verify"]

[workspace]
members = [
    "crates/claw_driver",
    "crates/claw_parse",
    "crates/claw_ir",
    "crates/claw_schema",
    "crates/claw_stdlib",
    "crates/claw_verify",
]
