[package]
name = "claw"
version = "0.1.0-dev"
authors = ["BD103"]
edition = "2021"
description = "Programming language that compiles into Scratch blocks (SB3)."
readme = "README.md"
# homepage = "https://bd103.github.io/Claw"
repository = "https://github.com/BD103/Claw"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
claw_parse = { path = "crates/claw_parse" }
claw_sb3 = { path = "crates/claw_sb3" }
claw_middle = { path = "crates/claw_middle" }
claw_verify = { path = "crates/claw_verify", optional = true }

[features]
verify = ["dep:claw_verify"]

[workspace]
members = [
    "crates/claw_driver",
    "crates/claw_parse",
    "crates/claw_sb3",
    "crates/claw_middle",
    "crates/claw_verify",
]
