[package]
name = "claw"
version = "0.1.0-dev"
authors = ["BD103"]
edition = "2021"
description = "Programming language that compiles into Scratch blocks (SB3)."
rust-version = "1.65.0"
readme = "README.md"
homepage = "https://bd103.github.io/Claw"
repository = "https://github.com/BD103/Claw"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tracing = { workspace = true }
tracing-subscriber = "0.3.16"

[workspace]
members = []

[workspace.package]
version = "0.1.0-dev"
authors = ["BD103"]
edition = "2021"
description = "Programming language that compiles into Scratch blocks (SB3)."
rust-version = "1.65.0"
readme = "README.md"
homepage = "https://bd103.github.io/Claw"
repository = "https://github.com/BD103/Claw"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
tracing = "0.1.37"
