[package]
name = "claw_parse"
version = "0.1.0-dev"
authors = ["BD103"]
edition = "2021"
description = "Programming language that compiles into Scratch blocks (SB3)."
readme = "README.md"
# homepage = "https://bd103.github.io/Claw"
repository = "https://github.com/BD103/Claw"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"

# Required for snapshot testing
serde = { version = "1.0.145", optional = true, features = ["derive"] }

[dev-dependencies]
insta = { version = "1.20.0", features = ["glob", "ron"] }

[[test]]
name = "snap"
path = "tests/snap.rs"
required-features = ["serde"]
