[package]
name = "claw_verify"
version = "1.0.0"
authors = ["BD103"]
edition = "2021"
description = "Command-line tool that verifies a Scratch project.json is valid."
repository = "https://github.com/BD103/Claw"

[dependencies]
claw = { path = "../../" }

# Error handling
anyhow = "1.0.62"

# Schema verification
jsonschema = "0.16.0"
serde_json = "1.0.85"

# Url medium for Json Schema
url = "2.2.2"
