[package]
name = "claw_verify"
version = "0.1.0-dev"
authors = ["BD103"]
edition = "2021"
description = "Programming language that compiles into Scratch blocks (SB3)."
readme = "README.md"
# homepage = "https://bd103.github.io/Claw"
repository = "https://github.com/BD103/Claw"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Error handling
anyhow = "1.0.62"

# Schema verification
jsonschema = "0.16.0"
serde_json = "1.0.85"

# Url medium for Json Schema
url = "2.2.2"
